fix spacing for search inputs

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,6 +11,7 @@
   background: #dfdfdf;
   padding: 10px;
   border-radius: 5px;
+  width: 20%;
 }
 
 nav {
